err/hero-crawl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hero_crawl-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vanko'...
Listing './lib/python3.5/site-packages/vanko/excel'...
Compiling './lib/python3.5/site-packages/vanko/excel/base.py'...
***   File "./lib/python3.5/site-packages/vanko/excel/base.py", line 370
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vanko/flask'...
Compiling './lib/python3.5/site-packages/vanko/flask/admin.py'...
***   File "./lib/python3.5/site-packages/vanko/flask/admin.py", line 108
    except StopIteration, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanko/flask/admin_redis.py'...
***   File "./lib/python3.5/site-packages/vanko/flask/admin_redis.py", line 183
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanko/flask/utils.py'...
***   File "./lib/python3.5/site-packages/vanko/flask/utils.py", line 87
    except StopIteration, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vanko/scrapy'...
Compiling './lib/python3.5/site-packages/vanko/scrapy/helpers.py'...
***   File "./lib/python3.5/site-packages/vanko/scrapy/helpers.py", line 223
    print 'See {} log at {}'.format(project_name, log_path)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vanko/scrapy/mongo'...
Listing './lib/python3.5/site-packages/vanko/scrapy/qt4'...
Listing './lib/python3.5/site-packages/vanko/scrapy/redis'...
Compiling './lib/python3.5/site-packages/vanko/scrapy/spider.py'...
***   File "./lib/python3.5/site-packages/vanko/scrapy/spider.py", line 74
    print '---------------- Settings ----------------'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vanko/scrapy/webdriver'...
Listing './lib/python3.5/site-packages/vanko/utils'...
Compiling './lib/python3.5/site-packages/vanko/utils/dates.py'...
***   File "./lib/python3.5/site-packages/vanko/utils/dates.py", line 8
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanko/utils/heroku.py'...
***   File "./lib/python3.5/site-packages/vanko/utils/heroku.py", line 140
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanko/utils/ipython.py'...
***   File "./lib/python3.5/site-packages/vanko/utils/ipython.py", line 10
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanko/utils/pdb.py'...
***   File "./lib/python3.5/site-packages/vanko/utils/pdb.py", line 18
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanko/utils/signal.py'...
***   File "./lib/python3.5/site-packages/vanko/utils/signal.py", line 59
    print '{}: ignore spurious signal {}'.format(
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanko/utils/xvfb.py'...
***   File "./lib/python3.5/site-packages/vanko/utils/xvfb.py", line 183
    os.chmod(pass_fd.name, 0700)
                              ^
SyntaxError: invalid token

Listing './share'...
Listing './share/python-wheels'...
